[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/sounds.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds_fonts/get_cristal.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/sounds_fonts/impact.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds_fonts/running.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds_fonts/fall_in_the_river.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds_fonts/boss_fury_passos.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds_fonts/jump_voice.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds_fonts/boss_fury.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds_fonts/game_over_sound.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds_fonts/game_start_sound.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds_fonts/door_openning.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds_fonts/background_super_sound.mp3" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds_fonts/mixkit-8-bit-bomb-explosion-2811.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds_fonts/mixkit-8-bit-game-shots-2778.wav" type="AudioStream" id=14]

[node name="sounds" type="Node2D"]
script = ExtResource( 1 )

[node name="crystal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.646

[node name="impact" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.646

[node name="running" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.674

[node name="jump_voice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.646

[node name="boss_fury_pass" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.646

[node name="boss_fury" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.646

[node name="start_game" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -16.566

[node name="background_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -15.655

[node name="fall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.646

[node name="door_openning" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -15.646

[node name="explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -15.646

[node name="laser_shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -15.646

[node name="you_lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.677
